# isic-v1

./: .env.template  .env.vps4.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-push.yml  ci.yml  deploy.yml
custom-addons/auth_cas/: __manifest__.py
custom-addons/auth_cas/controllers/: main.py
custom-addons/auth_cas/data/: auth_cas_provider_data.xml  cas_group_mapping_data.xml
custom-addons/auth_cas/models/: __init__.py  (+4 more)
custom-addons/isic_approbation/: __init__.py  __manifest__.py
custom-addons/isic_base/: __manifest__.py
custom-addons/isic_dashboard/: __init__.py  __manifest__.py
custom-addons/isic_ged/: __init__.py  __manifest__.py
custom-addons/isic_portal/: __init__.py  __manifest__.py
custom-addons/isic_theme/: __init__.py  __manifest__.py
custom-addons/isic_theme_website/: __manifest__.py
custom-addons/isic_website/: __init__.py  __manifest__.py
custom-addons/muk_web_appsbar/: __init__.py  __manifest__.py
custom-addons/muk_web_colors/: __init__.py
custom-addons/muk_web_dialog/: __manifest__.py
custom-addons/muk_web_enterprise_theme/: __init__.py  __manifest__.py
custom-addons/muk_web_group/: __manifest__.py
custom-addons/muk_web_refresh/: __manifest__.py
docker/: .env.vps3.template  Dockerfile  docker-compose.auth-vps.yml  docker-compose.vps4.yml  entrypoint.sh  init-ldap-vps.sh
docker/cas/: Dockerfile
docker/logrotate/: odoo.conf
docker/nginx/: auth.conf  vps4.conf
scripts/: backup.sh  generate_icons.py  generate_vps3_doc.py
(+203 files in other folders)
