[project]
name = "isic-odoo"
version = "19.0.1.0.0"
description = "ISIC Academic Management System based on Odoo 19"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "ISIC Rabat", email = "isicnumerique@gmail.com"},
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["custom-addons"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "B904", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["odoo", "odoo.addons"]
section-order = ["future", "standard-library", "third-party", "odoo", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"odoo" = ["odoo", "odoo.addons"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["custom-addons"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["custom-addons"]
omit = ["**/tests/*", "**/__manifest__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
